src/objects/My_Profile_Option__c.object
<CustomObject><fields>
        <fullName>Icon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Icon</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an Icon from the existing library.</errorMessage>
            <filterItems>
                <field>Content__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Icon</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content__c</referenceTo>
        <relationshipName>My_Profile_Options</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipName>My_Profile_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Sort_Order__c</fullName>
        <description>The order the link will appear in the dropdown</description>
        <label>Sort Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>URL__c</fullName>
        <label>Custom URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>My Account Navigation</label><nameField>
        <label>My Profile Option Name</label>
        <type>Text</type>
    </nameField><pluralLabel>My Account Navigation</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>